--- a/src/popup.html
+++ b/src/popup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AddressLabel Manager</title>
+  <title>Address Label Manager</title>
   <style>
     :root {
       --bg-color: #0d1117;
@@ -189,12 +189,12 @@
 </head>
 
 <body>
-  <h2>> AddressLabel_Manager</h2>
+  <h2>> Address Label Manager</h2>
 
   <div class="add-form">
     <div class="input-group">
-      <label for="address">Address (0x...)</label>
-      <input type="text" id="address" placeholder="0x1234..." autocomplete="off">
+      <label for="address">Address (EVM / BTC / SOL)</label>
+      <input type="text" id="address" placeholder="0x..., bc1..., 5U..." autocomplete="off">
     </div>
     <div class="input-group">
       <label for="nickname">Label</label>
